--- a/Barcode backend/backend/.env.dev
+++ b/Barcode backend/backend/.env.dev
@@ -6,4 +6,9 @@ APP_SECRET=bc46e8925f3ebed822e42e5b02afa3f6
 ### db = nom du service postgres dans compose (duplication avec compose)
 DATABASE_URL="postgresql://app:app@db:5432/app?serverVersion=16&charset=utf8"
 
-JWT_PASSPHRASE="ta_passphrase"
+
+# JWT (Tokens public et p^rivé généré avec "php bin/console lexik:jwt:generate-keypair" et gitignorés)
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+
+JWT_PASSPHRASE=devpass123
