Route /me pour affichage infos et mise en cache User

--- a/Barcode backend/backend/config/packages/security.yaml
+++ b/Barcode backend/backend/config/packages/security.yaml
@@ -16,9 +16,12 @@ security:
             # Ensure dev tools and static assets are always allowed
             pattern: ^/(_profiler|_wdt|assets|build)/
             security: false
+
         main:
             lazy: true
             provider: app_user_provider
+            stateless: true
+            jwt: ~ # ✅ active Lexik JWT authenticator
 
             # Activate different ways to authenticate:
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -31,6 +34,9 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/auth/(login|register)$, roles: PUBLIC_ACCESS }
+        - { path: ^/me$, roles: IS_AUTHENTICATED_FULLY }
+        # Wildward, reste des routes sécurisées par defaut:
+        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
