--- a/Barcode backend/docker-compose.yml
+++ b/Barcode backend/docker-compose.yml
@@ -35,6 +35,12 @@ services:
       php bin/console doctrine:migrations:migrate --no-interaction
       "
 
+  mailpit:
+    image: axllent/mailpit:latest
+    ports:
+      - "8025:8025" # Web UI
+      - "1025:1025" # SMTP
+
   api:
     build:
       context: .
