--- a/Barcode backend/backend/.env.dev
+++ b/Barcode backend/backend/.env.dev
@@ -12,3 +12,6 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 
 JWT_PASSPHRASE=devpass123
+
+# MailCatcher (MailPit)
+MAILER_DSN=smtp://mailpit:1025
