--- a/Barcode backend/backend/config/services.yaml
+++ b/Barcode backend/backend/config/services.yaml
@@ -11,13 +11,20 @@ parameters:
 services:
     # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
+        autowire: true # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
+        resource: "../src/"
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # App\Controller\:
+    #     resource: "../src/Controller/"
+    #     tags: ["controller.service_arguments"]
+    #     bind:
+    #         $verifyResendByUser: "@limiter.verify_mail_resend_by_user"
+    #         $verifyResendByIp: "@limiter.verify_mail_resend_by_ip"
